[package]
name = "libfrps-rs-client"
version = "0.1.0"
authors = ["Tomas Siegl <tomas.siegl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfrps-rs = { path = "../libfrps-rs" }
hyper = "0.13"
hyper-timeout = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0.26"
pretty_env_logger = "0.3.1"