[package]
name = "libfrps-rs-client"
version = "0.1.0"
authors = ["Tomas Siegl <tomas.siegl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfrps-rs = { path = "../libfrps-rs" }
async-std = { version = "1.5.0", features = ["attributes"] }
futures = "0.3.4"
async-h1 = "1.1.0"
http-types = "1.1.1"
anyhow = "1.0.26"
pretty_env_logger = "0.3.1"